--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="card">
-        
+        <h1><center>Welcome to Ocean of Technology</center></h1>
     </div>
 </body>
 </html>
