--- a/products.html
+++ b/products.html
@@ -53,7 +53,7 @@
 
         <div class="row">
             <div class="col-4">
-                <img src="images/product-1.jpg">
+                <img src="images/tshirt1.jpg">
                 <h4>Red Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
