--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
         <div class="row">
             <div class="col-4">
                 <a href="https://amzn.to/4jp0exR"><img src="images/tshirt1.jpg"></a>
-                <h4>Red Printed T-Shirt</h4>
+                <h4>Maroon Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
