--- a/products.html
+++ b/products.html
@@ -24,11 +24,11 @@
                 </div>
                 <nav>
                     <ul id="MenuItems">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Products</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">Account</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="./products.html">Products</a></li>
+                        <li><a href="./about.html">About</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
+                        <li><a href="./account.html">Account</a></li>
                     </ul>
                 </nav>
                 <img src="images/cart.png" width="30px" height="30px">
@@ -62,7 +62,7 @@
                     <i class="fas fa-star"></i>
                     <i class="far fa-star"></i>
                 </div>
-                <p>$50.00</p>
+                <p>₹250 - 300</p>
             </div>
 
             <div class="col-4">
