--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/drfish_logo.png" alt="RedStore" width="125px">
+                <img src="images/drfish.png" alt="RedStore" width="125px">
                 
             </div>
             <nav>
