--- a/product-details.html
+++ b/product-details.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="images/logo.png" alt="RedStore" width="125px">
+                <img src="images/drfish.png" alt="RedStore" width="125px">
 
             </div>
             <nav>
