--- a/products.html
+++ b/products.html
@@ -64,6 +64,19 @@
                 </div>
                 <p>₹250 - 300</p>
             </div>
+            
+            <div class="col-4">
+                <a href="https://amzn.to/4jlEJ0W"><img src="https://m.media-amazon.com/images/I/6126Scu9p6L._SY741_.jpg"></a>
+                <h4>Loose fit Super Soft Track Pants for Man | Track Pant for Men</h4>
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p>₹499 - 699</p>
+            </div>
 
             <div class="col-4">
                 <img src="images/product-2.jpg">
