--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RedStore | Ecommerce Website</title>
+    <title>DrFish Store | Ecommerce Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
           <div class="col-2">
               <h1>Give Your Workout<br>A New Style!</h1>
               <p>something you can write discrimination</p>
-              <a href="" class="btn">Explore Now &#8594</a>
+              <a href="./products.html" class="btn">Explore Now &#8594</a>
           </div>
           <div class="col-2">
               <img src="images/image1.png" >
@@ -79,8 +79,8 @@
                </div>
 
             <div class="col-4">
-                <img src="images/product-2.jpg">
-                <h4>Red Printed T-Shirt</h4>
+                <a href="https://amzn.to/4jlEJ0W"><img src="https://m.media-amazon.com/images/I/6126Scu9p6L._SY741_.jpg"></a>
+                <h4>Loose fit Super Soft Track Pants for Man | Track Pant for Men</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -88,7 +88,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <p>$50.00</p>
+                <p></p>
             </div>
 
             <div class="col-4">
