--- a/products.html
+++ b/products.html
@@ -53,7 +53,7 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="https://amzn.to/4jp0exR"><img src="images/tshirt1.jpg"></a>
+                <a href="https://amzn.to/4jp0exR" target="_blank"><img src="images/tshirt1.jpg"></a>
                 <h4>Maroon Printed T-Shirt</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
@@ -66,7 +66,7 @@
             </div>
             
             <div class="col-4">
-                <a href="https://amzn.to/4jlEJ0W"><img src="https://m.media-amazon.com/images/I/6126Scu9p6L._SY741_.jpg"></a>
+                <a href="https://amzn.to/4jlEJ0W" target="_blank"><img src="https://m.media-amazon.com/images/I/6126Scu9p6L._SY741_.jpg"></a>
                 <h4>Loose fit Super Soft Track Pants for Man | Track Pant for Men</h4>
                 <div class="rating">
                     <i class="fas fa-star"></i>
