--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <img src="images/category-2.jpg" alt="">
             </div>
             <div class="col-3">
-                <img src="images/category-3.jpg" alt="">
+                <a href="https://amzn.to/4joGxGp"><img src="images/category-3.jpg" alt=""></a>
             </div>
         </div>
         </div>
