--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                       <small>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque,
                     sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo
                     illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur
-                    blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</small>
+                    blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culp</small>
                       <a href="" class="btn">Buy Now &#8594;</a>
                   </div>
               </div>
